solved cta-section tablet bug

--- a/style.css
+++ b/style.css
@@ -423,6 +423,11 @@ img {
     text-align: left;
   }
 
+  .cta-section {
+    max-width: 600px;
+    margin: 7.5em auto -4em;
+  }
+
   .footer__grid {
     display: grid;
     grid-template-columns: repeat(3, auto);
